syntax = "proto2";

package protochat;

message PreLoginRequest {
	required string username = 1;
	required string password = 2;

	enum RequestType {
		REGISTRATION = 0;
		AUTHENTICATION = 1;
	}

	required RequestType requestType = 3;
}

message PreLoginResponse {
	required bool authorized = 1;
	optional string message = 2;
}

message ChatMessage {
	optional string username = 1;
	optional string message = 2;

	enum RequestType {
		LOGOUT = 0;
		MESSAGE = 1;
		N_ONLINE_USERS = 2; // number of online users
		LIST_ONLINE_USERS = 3;
	}

	optional RequestType requestType = 3 [default = MESSAGE];
}

message ChatResponse {
	optional string message = 1;
	optional int32 nOnlineUsers = 2;
	repeated string onlineUsers = 3;

	enum ResponseType {
		LOGOUT = 0;
		MESSAGE = 1;
		N_ONLINE_USERS = 2;
		LIST_ONLINE_USERS = 3;
	}

	required ResponseType responseType = 4 [default = MESSAGE];
}
